Small Edits Updated Title Page
Updated Title Page, to be the same Schema as Word equivalent. 
Some slight changes to Ack, Intro, thesis.tex files

--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -9,7 +9,7 @@ A short paragraph introducing the topic the chapter examines.
 A number of pages about the background of the project.
 
 \section{About this Thesis}
-This is the report of \emph{\authorName}, submitted as part of the requirements for the degree of \degreeAward at the School of Computer Science \& Mathematics, Liverpool John Moores University, Liverpool, UK.
+This is the report of \emph{\authorName}, submitted as part of the requirements for the degree of \degreeAward \space at the \dept, \university, \universityLocation.
 
 A number of paragraphs detailing the main expectations of this body of work.
 
