--- a/intro/abstract.tex
+++ b/intro/abstract.tex
@@ -3,6 +3,6 @@
 The Abstract of the report should be written here, it should provide a short summary of the work encompassing no more than one page.
 
 \prefacesection{Acknowledgements}
-The Acknowledgements section may be used to thank your supervisor, family, research funding bodies, or any other applicable individuals or institutions.
+The Acknowledgements section may be used to thank your supervisor, friends, family, peers or any other applicable individuals or institutions.
 
 \afterpreface \afterabstract
